; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_therm_pm72.c_dispose_dimms_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_therm_pm72.c_dispose_dimms_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.dimm_pid_state = type { i32* }

@of_dev = common dso_local global %struct.TYPE_2__* null, align 8
@dev_attr_dimms_temperature = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dimm_pid_state*)* @dispose_dimms_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dispose_dimms_state(%struct.dimm_pid_state* %0) #0 {
  %2 = alloca %struct.dimm_pid_state*, align 8
  store %struct.dimm_pid_state* %0, %struct.dimm_pid_state** %2, align 8
  %3 = load %struct.dimm_pid_state*, %struct.dimm_pid_state** %2, align 8
  %4 = getelementptr inbounds %struct.dimm_pid_state, %struct.dimm_pid_state* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %14

8:                                                ; preds = %1
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @of_dev, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = call i32 @device_remove_file(i32* %10, i32* @dev_attr_dimms_temperature)
  %12 = load %struct.dimm_pid_state*, %struct.dimm_pid_state** %2, align 8
  %13 = getelementptr inbounds %struct.dimm_pid_state, %struct.dimm_pid_state* %12, i32 0, i32 0
  store i32* null, i32** %13, align 8
  br label %14

14:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @device_remove_file(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
